--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "formik": "^2.4.9",
     "next": "16.0.5",
     "react": "19.2.0",
